--- a/Good-Playbook.yml
+++ b/Good-Playbook.yml
@@ -18,6 +18,8 @@
 
   roles:
   - haproxy
+    tags: 
+      - haproxy   
 
 - name: deploy postgres
   gather_facts: false
@@ -34,6 +36,10 @@
 
   roles:
   - tomcat
+  
+    tags: 
+      - tomcat 
+
 
 - name: deploy apache
   gather_facts: false
@@ -43,6 +49,9 @@
   roles:
   - httpd 
 
+    tags: 
+      - httpd 
+
 - name: Set index.html on app 1
   hosts: apps
   gather_facts: true
@@ -50,19 +59,15 @@
   vars:
     inventory_hostname: app1
   tasks:
-  - name: Register Hostname
-    setup:
-    register: facts
-
-  - name: print out facts
-    debug:
-      msg: "{{ facts }}"
-
   - name: copy static index.html to tomcat app1
     template:
       src: index.html.j2
       dest: /usr/share/tomcat/webapps/ansible/index.html
-    when: facts.ansible_hostname == "app1"
+    when: ansible_hostname == "app1"
+
+    tags: 
+      - index     
+    
     
 - name: Set index.html on app 2
   hosts: app
@@ -78,5 +83,6 @@
       dest: /usr/share/tomcat/webapps/ansible/index.html
     when: ansible_hostname == "app2"
 
-
+    tags: 
+      - index 
 
