--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -12,7 +12,7 @@
     template:
       src: ./haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
-      with_items: "{{ servers }}
+      with_items: {{ servers }}
       
   - name: restart HAproxy
     service:
