--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -22,4 +22,8 @@
     service:
       name: tomcat
       state: started
-      
+
+  - name: copy static index.html to tomcat app1
+    template:
+      src: index.html.j2
+      dest: /usr/share/tomcat/webapps/ansible/index.html
